# depthai_ros

./: .gitignore  .gitmodules  README.md
depthai_cmake/: CMakeLists.txt  depthai_cmakeConfig.cmake.in  depthai_cmake_macros.cmake.in
depthai_common_msgs/: CMakeLists.txt  README.md  package.xml
depthai_common_msgs/include/depthai_common_msgs/: libnop.hpp  msgpack.hpp  unmsgpack.hpp
depthai_common_msgs/include/depthai_common_msgs/plugin/: CameraBoardSocket.h  CameraImageOrientation.h  CameraModel.h  ChipTemperature.h  CpuUsage.h  DetectionNetworkType.h  MemoryInfo.h  Point2f.h  Point3f.after.h  Point3f.h  ProcessorType.h  Rect.h  RotatedRect.h  Size2f.h  Timestamp.h  UsbSpeed.h
depthai_common_msgs/msg/: ChipTemperature.msg  CpuUsage.msg  MemoryInfo.msg  Rect.msg  RotatedRect.msg  Timestamp.msg
depthai_datatype_msgs/: CMakeLists.txt  package.xml
depthai_datatype_msgs/include/depthai_datatype_msgs/: datatype_msgs.h
depthai_datatype_msgs/include/depthai_datatype_msgs/plugin/: IMUPacket.h  IMUReport.h  IMUReportAccelerometer.h  IMUReportAccuracy.h  IMUReportGyroscope.h  IMUReportMagneticField.h  IMUReportRotationVectorWAcc.after.h  IMUReportRotationVectorWAcc.h  ImgDetection.h  ManualExposureParams.h  RawCameraControl.h  RawCameraControlAntiBandingMode.h  RawCameraControlAutoFocusMode.h  RawCameraControlAutoWhiteBalanceMode.h  RawCameraControlCaptureIntent.h  RawCameraControlCommand.h  RawCameraControlControlMode.h  RawCameraControlEffectMode.h  RawCameraControlSceneMode.h  RawIMUData.h  RawImgDetections.h  RawImgFrame.h  RawImgFrameSpecs.h  RawImgFrameType.h  RawNNData.h  RawTracklets.h  RegionParams.h  TensorInfo.h  TensorInfoDataType.h  TensorInfoStorageOrder.h  TrackingStatus.h  Tracklet.h
depthai_datatype_msgs/msg/: IMUPacket.msg  IMUReport.msg  IMUReportGyroscope.msg  IMUReportRotationVectorWAcc.msg  ImgDetection.msg  ImgDetectionsStamped.msg  ManualExposureParams.msg  RawCameraControl.msg  RawIMUData.msg  RawImgDetections.msg  RawImgFrame.msg  RawImgFrameSpecs.msg  RawNNData.msg  RawTracklets.msg  RegionParams.msg  TensorInfo.msg  Tracklet.msg
depthai_hunter_deps/: CMakeLists.txt  package.xml
depthai_hunter_deps/cmake/Hunter/: config.cmake
depthai_ros/: CMakeLists.txt  package.xml
depthai_ros_driver/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  pipeline_plugins.xml
depthai_ros_driver/cmake/: ros_version_agnostic_add_node.cmake
depthai_ros_driver/include/depthai_ros_driver/: common_stampers.hpp  conversion.hpp  converter_and_stamper.hpp  dai_utils.hpp  depthai_base.hpp  depthai_base_ros2.hpp  depthai_common.hpp  device_ros.hpp  img_detections_stamper.hpp  multicam_pipeline.hpp  pipeline.hpp  pipeline_common.hpp  pipeline_ex.hpp  pipeline_loader.hpp  ros_agnostic.hpp  serde_helpers.hpp  visibility_control.h
depthai_ros_driver/include/depthai_ros_driver/control/: focus_control.hpp
depthai_ros_driver/include/depthai_ros_driver/impl/: depthai_base.hpp  img_detections_stamper.hpp  ros_agnostic.hpp
depthai_ros_driver/launch/: depthai_composition.launch.xml  depthai_composition.py  depthai_node.launch  depthai_node.launch.xml  depthai_nodelet.launch
depthai_ros_driver/params/: depthai_node.yaml
depthai_ros_driver/params/camera/bw1097/: depth.yaml  disparity_color.yaml  left.yaml  mjpeg.yaml  previewout.yaml  previewout_crop.yaml  right.yaml
depthai_ros_driver/params/camera/default/: depth.yaml  disparity.yaml  mjpeg.yaml  preview.yaml  previewout.yaml  previewout_crop.yaml  rgb.yaml
depthai_ros_driver/resources/: mobilenet-ssd.json  model.json
depthai_ros_driver/resources/calibration/bw1097/: depthai.calib
depthai_ros_driver/scripts/: deploy_udev_rules.sh
depthai_ros_driver/src/: common_stamper_nodelets.cpp  common_stampers.cpp  conversion.cpp  dai_utils.cpp  depthai_base.cpp  depthai_base_ros2.cpp  depthai_common.cpp  depthai_loader.cpp  depthai_node.cpp  depthai_node_ros2.cpp  depthai_nodelet.cpp  img_detections_stamper.cpp  img_detections_stamper_node.cpp  img_detections_stamper_nodelet.cpp  pipeline.cpp  pipeline_loader.cpp  retinanet_msg_converter_node.cpp  ros_xlink.cpp
depthai_ros_driver/src/control/: focus_control.cpp
depthai_ros_driver/src/pipelines/: mobilenet_ssd_pipeline.cpp  mono_camera_control_pipeline.cpp  multicam_pipeline.cpp  pipeline_ex.cpp  preview_pipeline.cpp  stereo_pipeline.cpp  stereo_with_detection_pipeline.cpp  stereo_with_mobilened_ssd_pipeline.cpp
depthai_ros_driver/test/: conversion.cpp  dai_utils.cpp  depthai_api.cpp
depthai_ros_driver/urdf/: bw1097.urdf.xacro
depthai_ros_msgs/: CMakeLists.txt  package.xml
depthai_ros_msgs/cmake/: ros_version_agnostic_add_messages.cmake
depthai_ros_msgs/include/depthai_ros_msgs/plugin/: DaiCameraBoardSocket.h  DaiCameraImageOrientation.h  DaiCameraModel.h  DaiChipTemperature.h  DaiCommonCameraBoardSocket.h  DaiCommonCameraImageOrientation.h  DaiCommonCameraModel.h  DaiCommonChipTemperature.h  DaiCommonCpuUsage.h  DaiCommonDetectionNetworkType.h  DaiCommonMemoryInfo.h  DaiCommonPoint2f.h  DaiCommonPoint3f.h  DaiCommonProcessorType.h  DaiCommonRect.h  DaiCommonRotatedRect.h  DaiCommonSize2f.h  DaiCommonTimestamp.h  DaiCommonUsbSpeed.h  DaiDatatypeImgDetection.h  DaiDatatypeRawImgDetections.h  DaiDatatypeRawImgFrame.h  DaiDatatypeRawImgFrameSpecs.h  DaiDatatypeRawImgFrameType.h  DaiDatatypeRawNNData.h  DaiDatatypeRawTracklets.h  DaiDatatypeTensorInfo.h  DaiDatatypeTensorInfoDataType.h  DaiDatatypeTensorInfoStorageOrder.h  DaiDatatypeTrackingStatus.h  DaiDatatypeTracklet.h  (+13 more)
depthai_ros_msgs/msg/: AutoFocusCtrl.msg  DaiCommonRotatedRect.msg  DaiCommonSize2f.msg  DaiDatatypeRawImgDetections.msg  DaiDatatypeRawImgFrame.msg  DaiDatatypeRawImgFrameSpecs.msg  DaiDatatypeRawNNData.msg  DaiDatatypeRawTracklets.msg  DaiDatatypeTensorInfo.msg  DaiDatatypeTracklet.msg  FocusControlCommand.msg  ImgDetectionsStamped.msg  NNStamped.msg  Object.msg  Objects.msg
depthai_ros_msgs/srv/: StreamState.srv
node_interface/: CMakeLists.txt  package.xml
node_interface/include/node_interface/: introspection.hpp  ros1_node_interface.hpp  ros1_reactive_node_interface.hpp
(+4 files in other folders)
