<?xml version="1.0"?>
<package format="2">
  <name>depthai_ros</name>
  <version>0.1.0</version>
  <description>depthai_ros meta-package</description>

  <maintainer email="kunal.tyagi@rapyuta-robotics.com">Kunal Tyagi</maintainer>

  <license>MPLv2</license>

  <author>Kunal Tyagi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>depthai_ros_driver</exec_depend>
  <exec_depend>depthai_ros_msgs</exec_depend>
  <exec_depend>node_interface</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
