<?xml version="1.0"?>
<package format="2">
  <name>depthai_ros_driver</name>
  <version>0.1.0</version>
  <description>
    ROS driver for DepthAI
  </description>

  <maintainer email="bhuvanchandra.dv@rapyuta-robotics.com">Bhuvanchandra DV</maintainer>
  <maintainer email="kunal.tyagi@rapyuta-robotics.com">Kunal Tyagi</maintainer>

  <license>MPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>depthai_ros_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>node_interface</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>

</package>
