<?xml version="1.0"?>
<package format="3">
  <name>depthai_ros_driver</name>
  <version>0.1.0</version>
  <description>
    ROS driver for DepthAI
  </description>

  <maintainer email="bhuvanchandra.dv@rapyuta-robotics.com">Bhuvanchandra DV</maintainer>
  <maintainer email="kunal.tyagi@rapyuta-robotics.com">Kunal Tyagi</maintainer>

  <license>MPLv2</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">nodelet</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>

  <depend>depthai_ros_msgs</depend>
  <depend>depthai_cmake</depend>
  <depend condition="$ROS_VERSION == 1">node_interface</depend>

  <depend>boost</depend>
  <depend>camera_info_manager</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <nodelet condition="$ROS_VERSION == 1" plugin="${prefix}/nodelet_plugins.xml"/>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
