<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depthai_ros_msgs</name>
  <version>1.0.0</version>
  <description>Package to keep interface independent of the driver</description>
  <maintainer email="kunal.tyagi@rapyuta-robotics.com">Kunal Tyagi</maintainer>
  <license>MPLv2</license>
  <author>Kunal Tyagi</author>

  <!-- classic ros1 compilation -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- ros2 compilation: TODO to make sure it works with rosdep -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend >rosidl_default_generators</buildtool_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export >
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
